--- a/configs/conf.ini
+++ b/configs/conf.ini
@@ -9,4 +9,6 @@ RSDisableSpaceGapAt = 5
 RSTextOffsetEN = 0
 RSTextOffsetDirCN = 0
 RSTextOffsetNameCN = 0
+RSOutputWidth = 2592
+RSOutputHeight = 1266
 
